# tilde

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bootstrap_mac.sh  bootstrap_windows.bat  meson.build  todo.md
proto/: game.proto
src/client/: camera.hpp  client_api.hpp  client_context.hpp  client_impl.cpp  console.cpp  console.hpp  game_state.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  state_manager.cpp  state_manager.hpp  undo_stack.hpp
src/client/editor/: editor_entity.hpp  editor_tool.hpp  editor_types.hpp  entity_inspector.cpp  entity_inspector.hpp  readme.md  test_editor_compile.cpp  transaction_system.hpp
src/client/editor/tools/: placement_tool.cpp  placement_tool.hpp  sculpting_tool.cpp  sculpting_tool.hpp  selection_tool.cpp  selection_tool.hpp
src/client/shaders/: aabb.frag  aabb.vert
src/client/states/: editor_gizmo.cpp  editor_gizmo.hpp  editor_state.cpp  editor_state.hpp  editor_state_draw.cpp  editor_state_input.cpp  editor_state_update.cpp  main_menu_state.hpp  play_state.cpp  play_state.hpp  tool_editor_state.cpp  tool_editor_state.hpp
src/launcher/: main_dedicated.cpp  main_integrated.cpp
src/proto/: game.pb.cc  game.pb.h
src/server/: server_api.hpp  server_context.hpp  server_impl.cpp
src/shared/: GAME_ARCHITECTURE.md  asset.cpp  asset.hpp  bsp.hpp  collision_detection.cpp  collision_detection.hpp  cvar.hpp  detached_console.hpp  ecs.hpp  entity.cpp  entity.hpp  entity_system.cpp  entity_system.hpp  file_watcher.cpp  file_watcher.hpp  game_session.cpp  game_session.hpp  linalg.hpp  log.hpp  map.cpp  map.hpp  map_baker.cpp  map_baker.hpp  math.hpp  plane.hpp  player_move.cpp  player_move.hpp  replay_system.hpp  rng.hpp  shapes.cpp  shapes.hpp  snapshot_system.hpp  task_system.cpp  task_system.hpp  timed_function.hpp  vertex.hpp
src/shared/components/: transform.h  type.h
src/shared/entities/: README.md  entity_list.hpp  player.h  player_entity.cpp  player_entity.hpp  static_entities.cpp  static_entities.hpp  weapon.h  weapon_entity.cpp  weapon_entity.hpp
src/shared/ideas_to_explore/: network_variable_quantizing.hpp
src/shared/network/: README.md  bitstream.hpp  client_connection_state.hpp  entity.hpp  entity_serialization.hpp  network_types.hpp  packet.hpp  protobuf_helpers.hpp  quantization.hpp  schema.cpp  schema.hpp  server_connection_state.hpp  udp_socket.cpp  udp_socket.hpp
src/shared/network/entities/: player_entity.cpp  player_entity.hpp
src/shared/old_ideas/: editor_state.cpp  editor_state_draw.cpp  editor_state_update.cpp  player.h  weapon.h
src/test/: camera_test.cpp  ecs_test.cpp  file_watcher_test.cpp  linalg_test.cpp  log_test.cpp  server_loop_test.cpp  session_test.cpp  task_system_test.cpp  test_asset_system.cpp  test_entity_delta_packing.cpp  test_network_serialization.cpp  test_rng.cpp  test_transaction_system.cpp  test_udp_socket.cpp
